tooling/nargo_cli/tests/snapshots/execution_success/inactive_signed_bitshift/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(active: bool, a: pub i16) -> pub i16 {
    if active {
        a >> a
    } else {
        0_i16
    }
}
